--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.kursovayadada">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KursoVayaDaDa"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".user.TeacherAddTaskActivity"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".user.UserTaskViewingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserGroupSelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminChangingInformationInScheduleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminChangeScheduleActivity"
+            android:exported="false" />
         <activity
             android:name=".user.DateActivity"
             android:exported="false" />
@@ -27,7 +46,8 @@
             android:exported="false" />
         <activity
             android:name=".admin.AddSubjectActivity"
-            android:exported="false" /> <!-- <activity -->
+            android:exported="false" />
+        <!-- <activity -->
         <!-- android:name=".LoginActivity" -->
         <!-- android:exported="false" /> -->
         <activity
@@ -40,7 +60,7 @@
             android:name=".admin.AdminMainActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".user.TeacherAddTaskActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.KursoVayaDaDa.NoActionBar">
